--- a/index.html
+++ b/index.html
@@ -11,23 +11,37 @@
         <nav></nav>
     </header>
     <main>
-        <section>
-            <article></article>
-        </section>
-
+        <h1>Lista del super</h1>
+       <section>
         <ul>
-            <li>Soy una manzana</li>
+            <li>Frutas
+                <ol>
+                    <li>manzana</li>
+                    <li>platano</li>
+                    <li>piña</li>
+                </ol>
+            </li>
+            <li>Verduras
+                <ol>
+                   <li><a href="https://youtu.be/qE8t445IAfc?si=_yORmAEgdLPb6p7G">zanahoria</a></li>
+                   <li>calabaza</li> 
+                   <li>chayote</li>
+                </ol>
+            </li>
+            <li>Carnes
+                <ol>
+                    <li>pollo</li>
+                    <li>res</li>
+                    <li><a href="https://youtu.be/M-ONFYvfhQQ?si=oi3rhwrG9NxsOwwt">pezcado</a> </li>
+                </ol>
+            </li>
         </ul>
-        <ol>
-            <li>Soy una manzana</li>
-        </ol>
+       </section>
+       
     </main>
 
     <footer>
-        <h1>Soy un titulo</h1>
-        <h2>otro ejemplo</h2>
-        <h3>Otro ejemplo</h3>
-        <a href="#">Soy un link</a>
+        
     </footer>
 </body>
 </html>
