--- a/index.html
+++ b/index.html
@@ -16,23 +16,24 @@
         <ul>
             <li>Frutas
                 <ol>
-                    <li>manzana</li>
-                    <li>platano</li>
-                    <li>piña</li>
+                    <li>manzana <img src="./picturs/manzana.png" alt="manzana"></li>
+                    <li>platano <img src="./picturs/platano.png" alt="platano"></li>
+                    <li>piña <img src="./picturs/piña.png" alt="piña"></li>
                 </ol>
             </li>
             <li>Verduras
                 <ol>
-                   <li><a href="https://youtu.be/qE8t445IAfc?si=_yORmAEgdLPb6p7G">zanahoria</a></li>
-                   <li>calabaza</li> 
-                   <li>chayote</li>
+                   <li><a href="https://youtu.be/qE8t445IAfc?si=_yORmAEgdLPb6p7G">zanahoria</a> <img src="./picturs/zanahoria.png" alt="zanahoria"></li>
+                   <li>calabaza <img src="./picturs/calabaza-removebg-preview.png" alt="calabaza"></li> 
+                   <li>chayote <img src="./picturs/chayote-removebg-preview.png" alt="chayote"></li>
                 </ol>
             </li>
             <li>Carnes
                 <ol>
-                    <li>pollo</li>
-                    <li>res</li>
-                    <li><a href="https://youtu.be/M-ONFYvfhQQ?si=oi3rhwrG9NxsOwwt">pezcado</a> </li>
+                    <li>pollo <img src="./picturs/pollo.png" alt="pollo"></li>
+                    <li>res <img src="./picturs/carne-de-res-removebg-preview.png" alt="res"></li>
+                    <li><a href="https://youtu.be/M-ONFYvfhQQ?si=oi3rhwrG9NxsOwwt">pezcado</a> <img src="./picturs/pezcado.png" alt="pezcado
+                        "> </li>
                 </ol>
             </li>
         </ul>
